[package]
name = "ddmw-client"
version = "0.1.0"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
keywords = [ "ddmw" ]
repository = "https://github.com/openqrnch/ddmw-client"
description = "Utility functions for DDMW client application/proxy integrations"
exclude = [ "ddmwapp.toml", "examples" ]

[dependencies]
blather = { version = "0.8" }
bytes = { version = "1" }
figment = { version = "0.10", features = ["toml"] }
futures = { version = "0.3" }
killswitch = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net"] }
tokio-stream = { version = "0.1" }
tokio-util = { version= "0.6" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }

